Add small changes to bibliography

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -131,13 +131,13 @@
 %%%%% BIBLIOGRAFIA
 
 \nocite{biernacki2017handle}
-\nocite{biernacki2019abstracting}
 \nocite{biernacki2019binders}
-%% \nocite{pretnar2015introduction}
-\nocite{pietersgeneralized}
-\nocite{mcbride2012frank}
 
-\bibliographystyle{abbrv}
+\nocite{pietersgeneralized}
+
+\nocite{peyton1993imperative}
+
+\bibliographystyle{unsrt} %{abbrv} % unsrt sortuje według kolejności wystąpień
 \bibliography{bibliography}
 
 \end{document}
