--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -17,16 +17,6 @@
   publisher={Cambridge University Press}
 }
 
-@article{biernacki2017handle,
-  title={Handle with care: relational interpretation of algebraic effects and handlers},
-  author={Biernacki, Dariusz and Pir{\'o}g, Maciej and Polesiuk, Piotr and Sieczkowski, Filip},
-  journal={Proceedings of the ACM on Programming Languages},
-  volume={2},
-  number={POPL},
-  pages={1--30},
-  year={2017},
-  publisher={ACM New York, NY, USA}
-}
 @article{biernacki2019abstracting,
   title={Abstracting algebraic effects},
   author={Biernacki, Dariusz and Pir{\'o}g, Maciej and Polesiuk, Piotr and Sieczkowski, Filip},
@@ -35,6 +25,16 @@
   number={POPL},
   pages={1--28},
   year={2019},
+  publisher={ACM New York, NY, USA}
+}
+@article{biernacki2017handle,
+  title={Handle with care: relational interpretation of algebraic effects and handlers},
+  author={Biernacki, Dariusz and Pir{\'o}g, Maciej and Polesiuk, Piotr and Sieczkowski, Filip},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={2},
+  number={POPL},
+  pages={1--30},
+  year={2017},
   publisher={ACM New York, NY, USA}
 }
 @article{biernacki2019binders,
@@ -122,6 +122,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+%% not cited
 @article{mcbride2012frank,
   title={The Frank manual},
   author={McBride, Conor},
