--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -60,7 +60,7 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
   keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
   commentstyle=\color[rgb]{0.133,0.545,0.133},
   stringstyle={\color[rgb]{0.75,0.49,0.07}},
-  morekeywords={Applicative, Selective, State, Store, Task, Tasks, Build},
+  morekeywords={Applicative, Selective, State, MonadState, Store, Task, Tasks, Build, Scheduler, Rebuilder},
   upquote=true,
   breaklines=true,
   breakatwhitespace=true,
@@ -128,8 +128,6 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 
 \chapter{Podsumowanie i wnioski}
 
-\ldots
-
 %%%%% BIBLIOGRAFIA
 
 \nocite{biernacki2017handle}
@@ -141,5 +139,8 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 
 \bibliographystyle{unsrt} %{abbrv} % unsrt sortuje według kolejności wystąpień
 \bibliography{bibliography}
+
+%% \appendix
+%% \input{traces}
 
 \end{document}
