--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -1,7 +1,7 @@
 % Opcje klasy 'iithesis' opisane sa w komentarzach w pliku klasy. Za ich pomoca
 % ustawia sie przede wszystkim jezyk i rodzaj (lic/inz/mgr) pracy, oraz czy na
 % drugiej stronie pracy ma byc skladany wzor oswiadczenia o autorskim wykonaniu.
-\documentclass[lic,declaration,shortabstract,masc]{iithesis}
+\documentclass[lic,shortabstract]{iithesis}
 
 \usepackage[utf8]{inputenc}
 
