Write summary chapter and update introduction accordingly

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -126,7 +126,7 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 
 \input{build_systems_using_effects}
 
-\chapter{Podsumowanie i wnioski}
+\input{summary}
 
 %%%%% BIBLIOGRAFIA
 
