Organize LaTeX commands

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -112,6 +112,9 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 \newcommand{\BSaLC}{,,Build systems {\`a} la carte''}
 \newcommand{\BSaLCTP}{,,Build systems {\`a} la carte: Theory and practice''}
 
+\newcommand{\haskinl}[1]{\lstinline[style=haskell-inl]{#1}}
+\newcommand{\helinl}[1]{\lstinline[style=Haleff-inl]{#1}}
+
 \begin{document}
 
 %%%%% POCZĄTEK ZASADNICZEGO TEKSTU PRACY
