--- a/thesis/build_systems_a_la_carte.tex
+++ b/thesis/build_systems_a_la_carte.tex
@@ -295,3 +295,5 @@ Głębokie okruszki konstruktywne & Buck         & -            & Nix \\
 \section{Implementowanie systemów}
 
 Mając już ustaloną klasyfikację oraz definicje abstrakcyjnych konstrukcji i typów w Haskellu, można zaimplementować planistów i rekompilatorów. Wtedy utworzenie implementacji znanych systemów kompilacji (a nawet tych, które dotychczas były tylko pustymi polami w tabeli) jest zwykłym zaaplikowaniem rebuildera do schedulera. Wszystkie implementacje przedstawione przez autorów \BSaLC{} są dostępne w tekstach artykułów \cite{mokhov2018build, mokhov2020build} oraz w repozytorium\footnote{\url{https://github.com/snowleopard/build}} w serwisie GitHub. W rozdziale 5 zobaczymy, jak implementacja takich systemów wygląda w języku z efektami algebraicznymi i uchwytami.
+
+\undef\inl
