Add appendix with source notes

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -143,7 +143,7 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 \bibliographystyle{unsrt} %{abbrv} % unsrt sortuje według kolejności wystąpień
 \bibliography{bibliography}
 
-%% \appendix
-%% \input{traces}
+\appendix
+\input{source_notes}
 
 \end{document}
