--- a/thesis/source_notes.tex
+++ b/thesis/source_notes.tex
@@ -10,7 +10,7 @@
 \item \file{Store.he} -- efekt zasobu oraz uchwyty dla niego,
 \item \file{Schedulers.he} -- implementacje planistów,
 \item \file{Rebuilders.he} -- implementacje rekompilatorów,
-\item \file{Traces.he} -- funkcje do interakcji z okruszkami,
+\item \file{Traces.he} -- funkcje do interakcji ze śladami,
 \item \file{Track.he} -- implementacje funkcji \helinl{run} oraz \helinl{track},
 \item \file{Systems.he} -- przykłady definicji omawianych systemów,
 \item \file{Spreadsheet.he} -- implementacja obiektów związanych z arkuszami kalkulacyjnymi,
@@ -22,27 +22,27 @@
 \item \file{SchedulersWithLogging.he} -- implementacje planistów wzbogacone o wyświetlanie informacji diagnostycznych
 \end{itemize}
 
-\section{Implementacje okruszków}
+\section{Implementacje śladów}
 
-Dokładny opis okruszków w rozdziale 5 został pominięty, gdyż nie wydają się one być ciekawą częścią implementacji systemów kompilacji. Jednak dla porządku ich implementacje są przedstawione poniżej. 
+Dokładny opis śladów w rozdziale 5 został pominięty, gdyż nie wydają się one być ciekawą częścią implementacji systemów kompilacji. Jednak dla porządku ich implementacje są przedstawione poniżej.
 
-\subsection{Typ okruszków}
+\subsection{Typ śladów}
 
-Dla okruszków definiujemy typ analogiczny to tego z oryginalnej implementacji w Haskellu.
+Dla śladów definiujemy typ analogiczny to tego z oryginalnej implementacji w Haskellu.
 
 \begin{minipage}{\textwidth}
   \lstinputlisting[style=Haleff-long, linerange={13-14}]{../Traces.he}
 \end{minipage}
 
-Warto zwrócić uwagę, że kompilacja zadań w czasie działania funkcji weryfikujących lub konstruujących okruszki odbywa się w kontekście specjalnego uchwytu, który zwraca nie wartości lecz ich skróty.
+Warto zwrócić uwagę, że kompilacja zadań w czasie działania funkcji weryfikujących lub konstruujących ślady odbywa się w kontekście specjalnego uchwytu, który zwraca nie wartości lecz ich skróty.
 
-\subsection{Okruszki weryfikujące}
+\subsection{Ślady weryfikujące}
 
 \begin{minipage}{\textwidth}
   \lstinputlisting[style=Haleff-long, linerange={18-28}]{../Traces.he}
 \end{minipage}
 
-\subsection{Okruszki konstruktywne}
+\subsection{Ślady konstruktywne}
 
 \begin{minipage}{\textwidth}
   \lstinputlisting[style=Haleff-long, linerange={37-49}]{../Traces.he}
@@ -50,7 +50,7 @@ Warto zwrócić uwagę, że kompilacja zadań w czasie działania funkcji weryfi
 
 W funkcjach \helinl{constructCT} oraz \helinl{deepDependencies} wykorzystywany jest efekt \helinl{Writer}. W \BSaLC{} wykorzystywane były typ \haskinl{Maybe} i funkcja \haskinl{catMaybes} oraz list comprehensions. Autor zachęcony brakiem infrastruktury wokół \helinl{Some} (Heliumowego odpowiednika \haskinl{Maybe}) postanowił wypróbować moduł \helinl{Writer} i zobaczyć jaki da to efekt.
 
-\subsection{Głębokie okruszki konstruktywne}
+\subsection{Głębokie ślady konstruktywne}
 
 \begin{minipage}{\textwidth}
   \lstinputlisting[style=Haleff-long, linerange={53-73}]{../Traces.he}
