Rename names of chapters' files

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -119,17 +119,17 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 
 %%%%% POCZĄTEK ZASADNICZEGO TEKSTU PRACY
 
-\input{introduction}
+\input{1-introduction}
 
-\input{effects_in_theory}
+\input{2-effects_in_theory}
 
-\input{build_systems_a_la_carte}
+\input{3-build_systems_a_la_carte}
 
-\input{effects_in_practise}
+\input{4-effects_in_practise}
 
-\input{build_systems_using_effects}
+\input{5-build_systems_using_effects}
 
-\input{summary}
+\input{6-summary}
 
 %%%%% BIBLIOGRAFIA
 
@@ -144,6 +144,6 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 \bibliography{bibliography}
 
 \appendix
-\input{source_notes}
+\input{a-source_notes}
 
 \end{document}
