Review some comments in thesis' text

--- a/thesis/1-introduction.tex
+++ b/thesis/1-introduction.tex
@@ -4,9 +4,7 @@
 
 Programy komputerowe, dzięki możliwości interakcji z zewnętrznymi zasobami takimi jak nośniki pamięci, sieci komputerowe czy użytkownicy oprogramowania, mogą robić istotnie więcej niż tylko zadane wcześniej obliczenia. W ten sposób przebieg programu i jego wynik staje się jednak zależny od tegoż świata zewnętrznego, a sam program nie jest tylko serią czystych obliczeń ale także towarzyszących im efektów ubocznych.
 
-%% v: ,,jednak'' trochę nie pasuje
-
-Efekty uboczne powodują jednak, że rozumowanie i wnioskowanie o sposobie oraz prawidłowości działania programów staje się znacznie trudniejsze, a w konsekwencji ogranicza ich modularność i prowadzi do częstszych pomyłek ze strony autorów. Chcąc tego uniknąć, dąży się do wydzielania w programie jak największej części, która składa się z czystych obliczeń. Jednak to, czy jakiś moduł oprogramowania wykonuje obliczenia bez efektów ubocznych nie koniecznie jest jasne i często musimy zaufać autorowi, że w istocie tak jest.
+Efekty uboczne powodują też, że rozumowanie i wnioskowanie o sposobie oraz prawidłowości działania programów staje się znacznie trudniejsze, a w konsekwencji ogranicza ich modularność i prowadzi do częstszych pomyłek ze strony autorów. Chcąc tego uniknąć, dąży się do wydzielania w programie jak największej części, która składa się z czystych obliczeń. Jednak to, czy jakiś moduł oprogramowania wykonuje obliczenia bez efektów ubocznych nie koniecznie jest jasne i często musimy zaufać autorowi, że w istocie tak jest.
 
 \section{Radzenie sobie z efektami ubocznymi}
 
