--- a/thesis/4-effects_in_practise.tex
+++ b/thesis/4-effects_in_practise.tex
@@ -75,22 +75,25 @@ Jeśli skorzystamy z tego uchwytu w programie, po wyświetleniu ostrzeżenia obl
 
 Powróćmy do problemu, który w rozdziale drugim był inspiracją do rozważania niedeterminizmu -- sprawdzanie czy formuła jest spełnialna oraz czy jest tautologią. Przedstawiliśmy wtedy uchwyty dla obu tych problemów w naszej notacji. Implementacja efektu niedeterminizmu, operacji \inl{amb} oraz uchwytów wraz z wykorzystaniem ich wygląda następująco:
 
-\lstinputlisting[lastline=22]{code_examples/nondet1__simple.he}
+\lstinputlisting[linerange={1-7}]{code_examples/nondet1__simple.he}
+\lstinputlisting[linerange={8-22}]{code_examples/nondet1__simple.he}
 
 Będziemy sprawdzać, czy formuła wyrażona za pomocą funkcji \inl{formula1} jest spełnialna. W tym celu w \inl{main} -- wewnątrz uchwytu -- niedeterministycznie ustalamy wartości zmiennych \inl{x}, \inl{y}, \inl{z}, po czym obliczamy wartość \inl{formula1}. Wartość obsługiwanego wyrażenia, którą przypisujemy do zmiennej \inl{ret}, jest następnie wykorzystana do wypisania komunikatu. Ponadto -- w celu demonstracji możliwości języka -- w uchwytach zamiast kontynuować obliczenie używając \inl{resume}, przypisujemy kontynuacji nazwę \inl{r}.
 
-W Helium uchwyty mogą posiadać przypadki nie tylko dla operacji związanych z jakimś efektem ale także dwa specjalne: \inl{return} oraz \inl{finally}. Pierwszy jest wykonywany, gdy obliczenie pod kontrolą uchwytu kończy się zwracając wynik. Przypadek \inl{return} jako argument otrzymuje wynik obliczenia. Zaś \inl{finally} otrzymuje jako argument obliczenie obsługiwane przez uchwyt i jest uruchamiane na początku działania uchwytu. Domyślnie przypadki te są zaimplementowane jako:
+W Helium uchwyty mogą posiadać przypadki nie tylko dla operacji związanych z jakimś efektem ale także dwa specjalne: \inl{return} oraz \inl{finally}. Pierwszy jest wykonywany, gdy obliczenie pod kontrolą uchwytu kończy się zwracając wynik. Przypadek \inl{return} jako argument otrzymuje wynik obliczenia. Zaś \inl{finally} otrzymuje jako argument obliczenie obsługiwane przez uchwyt i jest uruchamiane na początku działania uchwytu. Domyślnie przypadki zwracają otrzymane wartości.% te są zaimplementowane jako:
 
-\begin{lstlisting}
-handler
-| return x => x
-| finally f => f
-end
-\end{lstlisting}
+%% \begin{lstlisting}
+%% handler
+%% | return x => x
+%% | finally f => f
+%% end
+%% \end{lstlisting}
+
+%% ^ usunięte gdyż powodowało problemy dla LaTeX'a, a nic nie wnosiło (prócz nieprawidłowego wyrażenia w Helium)
 
 Możemy je jednak sprytnie wykorzystać. Przykładowo, zamiast tylko sprawdzać czy formuła jest spełnialna, możemy sprawdzić przy ilu wartościowaniach jest prawdziwa:
 
-\lstinputlisting[firstline=5, lastline=16]{code_examples/nondet2__count_sats.he}
+\lstinputlisting[linerange={5-16}]{code_examples/nondet2__count_sats.he}
 
 Gdy obliczenie się kończy -- zamiast zwracać, czy formuła jest spełniona -- zwracamy 1 albo 0, w zależności, czy formuła przy aktualnym wartościowaniu jest spełniona. Gdy obsługujemy niedeterministyczny wybór, kontynuujemy obliczenie dla obu możliwych wartości boolowskich po czym dodajemy wyniki. Wykorzystując \inl{finally} możemy włączyć komunikat o liczbie wartościowań do uchwytu:
 
@@ -127,7 +130,10 @@ Jeśli chcemy, aby obliczenie zwracało nie tylko wartość wynikową, ale takż
 
 Dzięki zdefiniowanemu efektowi ubocznemu, operacjom oraz uchwytom możemy teraz łatwo wykonywać obliczenia ze stanem:
 
-\lstinputlisting[firstline=7, lastline=24]{code_examples/state3__example.he}
+%% \lstinputlisting[firstline=7, lastline=24]{code_examples/state3__example.he}
+\lstinputlisting[linerange={7-11}]{code_examples/state3__example.he}
+\pagebreak
+\lstinputlisting[linerange={13-22}]{code_examples/state3__example.he}
 
 \subsection{Efekt rekursji}
 
@@ -156,25 +162,25 @@ Utrzymujemy informację, która funkcja jest aktualnie wykonywana i gdy prosi o 
 
 \subsection{Wiele efektów naraz -- porażka i niedeterminizm}
 
-Na koniec rozdziału zobaczymy jak łatwo w Helium komponuje się efekty. Definiujemy efekty niedeterminizmu oraz porażki:
+Na koniec rozdziału zobaczymy jak łatwo w Helium komponuje się efekty. Definiujemy efekty niedeterminizmu i porażki oraz bardzo proste uchwyty dla tych efektów:
 
-\lstinputlisting[firstline=1, lastline=5]{code_examples/fail_and_amb.he}
+\lstinputlisting[linerange={1-13}]{code_examples/fail_and_amb.he}
 
-oraz bardzo proste uchwyty dla tych efektów:
+%% oraz bardzo proste uchwyty dla tych efektów:
 
-\lstinputlisting[firstline=7, lastline=15]{code_examples/fail_and_amb.he}
+%% \lstinputlisting[firstline=7, lastline=15]{code_examples/fail_and_amb.he}
 
 Definiujemy teraz funkcję sprawdzającą, czy otrzymana formuła z trzema zmiennymi wolnymi jest spełnialna:
 
-\lstinputlisting[firstline=19, lastline=25]{code_examples/fail_and_amb.he}
+\lstinputlisting[linerange={17-23}]{code_examples/fail_and_amb.he}
 
 Jeśli formuła przy ustalonym wartościowaniu nie jest spełniona, powoduje efekt porażki. Zwróćmy uwagę w jakiej kolejności są umieszczone uchwyty -- niedeterminizmu na zewnątrz, zaś porażki wewnątrz. W ten sposób, gdy wystąpi porażka, jej uchwyt zwróci fałsz, w wyniku czego nastąpi powrót do ostatniego punktu niedeterminizmu, w którym jest jeszcze wybór. Dzięki temu wartość \inl{is\_sat f} jest równa fałszowi tylko, gdy przy każdym wartościowaniu nastąpi porażka. Zobaczmy teraz funkcję sprawdzającą, czy otrzymana formuła jest tautologią:
 
-\lstinputlisting[firstline=27, lastline=33]{code_examples/fail_and_amb.he}
+\lstinputlisting[linerange={25-31}]{code_examples/fail_and_amb.he}
 
 Tutaj uchwyt dla porażki znajduje się na zewnątrz -- wystąpienie porażki oznacza, że istnieje wartościowanie przy którym formuła nie jest prawdziwa, a w konsekwencji nie może być tautologią. Możemy teraz napisać zgrabną funkcję, która wypisze nam czy \inl{formula1} jest spełnialna oraz czy jest tautologią:
 
-\lstinputlisting[firstline=35, lastline=46]{code_examples/fail_and_amb.he}
+\lstinputlisting[linerange={33-42}]{code_examples/fail_and_amb.he}
 
 Z łatwością napisaliśmy program, który korzysta z wielu efektów ubocznych jednocześnie, mimo że żaden z nich (ani uchwyty) nie wiedzą o istnieniu drugiego. Łączenie efektów jest bardzo proste, a kolejność w jakiej umieszczamy uchwyty umożliwia nam łatwe i czytelne definiowanie zachowania programu w przypadku wystąpienie któregokolwiek z efektów.
 
